Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 10.1.20, 5.5.54-galera, 10.0.29-galera
-
Component/s: Galera
-
Labels:None
Description
wsrep_dirty_reads system variable should be updated to cover following scenarios:
- Global + Session scope (Current: session-only)
- Allow all commands that do not change data (besides SELECT)
- Allow prepared Statements that do not change data
- Works with wsrep_sync_wait enabled
Attachments
Issue Links
- links to