sql/wsrep_mysqld.h
@@ -89,6 +89,7 @@ extern ulong       wsrep_running_threads;
 extern bool        wsrep_new_cluster;
 extern bool        wsrep_gtid_mode;
 extern uint32      wsrep_gtid_domain_id;
+extern bool        wsrep_dirty_reads;
 
 enum enum_wsrep_OSU_method {
     WSREP_OSU_TOI,
